# selfdiffusion-inferex-docker

./: Dockerfile  README.md  inference.py  pyproject.toml
.github/workflows/: docker.yml
download/: download_and_save.py
test/: locustfile.py
