[tool.poetry]
name = "selfdiffusion-inferex-docker"
version = "0.1.0"
description = "Inference with the diffusers library"
authors = ["Jonathan Pelletier <jonathan.pelletier-aafz@thecloudco.ca>"]
readme = "README.md"
packages = [{include = "selfdiffusion_inferex_docker"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
diffusers = "^0.17.1"
transformers = "^4.30.2"
accelerate = "^0.20.3"
click = "^8.1.3"
runpod = "^0.9.11"
locust = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
